# ristorazione

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
ristorazione/: authentication.py  backend_tests.py  dependencies.py  main.py
ristorazione/database/: crud.py  models.py  schemas.py
ristorazione/routers/: users.py
static/: style.css
templates/: about.htm  dashboard.htm  delete.htm  error.htm  home.htm  login.htm  nav.htm  register.htm  stampo.htm
templates/Admin/Restaurant/: details.htm  list.htm
templates/Admin/Subscription/: addOrMod.htm  addToRestaurant.htm  list.htm
templates/Admin/User/: list.htm
templates/Menu/: addOrMod.htm  details.htm  inspect.htm
templates/Menu/Category/: edit.htm
templates/Menu/Plate/: addOrMod.htm  inspectComponents.htm
templates/Menu/Plate/Ingredients/: addOrMod.htm
templates/Orders/: dashboard.htm  menu.htm
templates/Restaurant/: addOrMod.htm  info.htm  list.htm  management.htm  tables.htm
templates/Subscriptions/: grid.htm  request.htm  result.htm  show.htm
